# StlkrTestAssignment

./: CMakeLists.txt
include/: Container.h
samples/: input1.txt
src/: ConsoleSort.cpp  Container.cpp
